# -*- coding: utf-8 -*-
[metadata]
name = domi
summary = domi application
description-file =
    README.md
author = fafa
author-email = some@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/falibabaei/domi
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    domi

[entry_points]
deepaas.v2.model =
    domi = domi.api
